--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h1>What do we do?</h1>
           <h2>We help you live greener</h2>
           <p>Download the app now</p>
-          <button class="main__btn"><a href="#">Download</a></button>
+          <button class="main__btn"><a href="#services">Download</a></button>
         </div>
       </div>
     </div>
